
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "0")

SET(COMPLETE_VERSION ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})

SET(RELEASE_NAME "SpliceForTool")

# IF (POLICY CMP0048) # in CMake 3.0.0+
  # CMAKE_POLICY (SET CMP0048 OLD) # keep PROJECT() from clearing VERSION variables
# ENDIF (POLICY CMP0048)

SET(PROJECT_VERSION ${COMPLETE_VERSION})
PROJECT(SpliceForTool)

INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")

CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)

SET(CMAKE_COLOR_MAKEFILE ON)

# set path to additional CMake modules
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

INCLUDE(GenerateExportHeader)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

# 输出目录
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/lib)

SET(CMAKE_RUNTIME_RELEASE_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/release)

SET(CS_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output/bin)

# 库文件输出目录
SET(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

ADD_SUBDIRECTORY(spliceForTool)
ADD_SUBDIRECTORY(spliceForTool/external/spdlog)
