
# sources
SET(CS_SIMCONFIG_SRC 
    ${CMAKE_CURRENT_SOURCE_DIR}/cssimconfig.cpp	
)

# headers
#FILE(GLOB CS_BROWSER_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
SET(CS_SIMCONFIG_HEADERS   
    ${CMAKE_CURRENT_SOURCE_DIR}/cssimconfig.h	
)

#设置自动生成的头文件到src目录
SET(CS_EXPORT_HEADER ${CMAKE_SOURCE_DIR}/spliceForTool/common/cssimconfig/cssimconfig_export.h)
#设置工程名称
SET(CURRENT_PROJ_NAME cssimconfig)

SET(CS_SIMCONFIG_SRC ${CS_SIMCONFIG_SRC} ${CS_SIMCONFIG_HEADERS} )

SET(CS_SIMCONFIG_HEADERS ${CS_SIMCONFIG_HEADERS} ${CS_EXPORT_HEADER})

#包含目录
INCLUDE_DIRECTORIES(
					${CMAKE_SOURCE_DIR}/spliceForTool/common
					${CMAKE_SOURCE_DIR}/spliceForTool
					${CMAKE_SOURCE_DIR}/spliceForTool/external
)

#链接库TARGET
LINK_LIBRARIES(   
 cssimlog     
)

################################################################################################${CS_BROWSER_MOC_SRCS}

#生成库
ADD_LIBRARY(${CURRENT_PROJ_NAME} SHARED ${CS_SIMCONFIG_HEADERS} ${CS_SIMCONFIG_SRC})

SET_TARGET_PROPERTIES(${CURRENT_PROJ_NAME} PROPERTIES FOLDER "common")

#生成头文件
GENERATE_EXPORT_HEADER(cssimconfig
EXPORT_FILE_NAME ${CS_EXPORT_HEADER}
)

#链接库
TARGET_LINK_LIBRARIES(cssimconfig  
)

#INSTALL()
#INSTALL(TARGETS ${CURRENT_PROJ_NAME}
#  RUNTIME DESTINATION ${12YSIM_INSTALL_PATH}
#  LIBRARY DESTINATION ${12YSIM_INSTALL_PATH}
#  ARCHIVE DESTINATION ${12YSIM_INSTALL_PATH}
#  FRAMEWORK DESTINATION ${12YSIM_INSTALL_PATH}
#  PUBLIC_HEADER DESTINATION ${12YSIM_INSTALL_PATH}
#  )

#INSTALL(FILES ${CMAKE_RUNTIME_RELEASE_OUTPUT_DIRECTORY}/${CURRENT_PROJ_NAME}.pdb DESTINATION ./pdb
#  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
#        GROUP_EXECUTE GROUP_READ
#  )