
# sources
FILE(GLOB CS_SIM_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

# headers
FILE(GLOB CS_SIM_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

#设置工程名称
SET(CURRENT_PROJ_NAME csdds_test)

SET(CS_ENGINE_SRC ${CS_SIM_SRC} ${CS_SIM_HEADERS})

#包含目录
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}
					${CMAKE_SOURCE_DIR}/spliceForTool/external/OpenSplice/x64/include
					${CMAKE_SOURCE_DIR}/spliceForTool/external/OpenSplice/x64/include/dcps/C++/isocpp2
					${CMAKE_SOURCE_DIR}/spliceForTool/external/OpenSplice/x64/include/sys
					${CMAKE_SOURCE_DIR}/spliceForTool/external/OpenSplice/x64/include/dcps/C++/SACPP		
                    ${CMAKE_SOURCE_DIR}/spliceForTool/dds/dds_service	                
					${CMAKE_SOURCE_DIR}/spliceForTool/dds/dds_msg_types
					${CMAKE_SOURCE_DIR}/spliceForTool/cssimlog					
)

#库目录
LINK_DIRECTORIES( ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} 
                  ${CMAKE_SOURCE_DIR}/spliceForTool/external/OpenSplice/x64/lib
				)

#链接库TARGET
LINK_LIBRARIES(   
   csdds_msg_type
   csdds_service
   cssimlog
)				

#set( ENV{PATH} {CMAKE_SOURCE_DIR}external/OpenSplice/bin {CMAKE_SOURCE_DIR}/external/OSGeo4W64/bin;)

#生成库
ADD_EXECUTABLE(${CURRENT_PROJ_NAME} ${CS_SIM_HEADERS} ${CS_SIM_SRC})

SET_TARGET_PROPERTIES(${CURRENT_PROJ_NAME} PROPERTIES FOLDER "test")

#SET(CMAKE_CXX_FLAGS "${CMKAE_CXX_FLAGS}  /Zi /Od")
#SET(CMAKE_CXX_FLAGS "${CMKAE_CXX_FLAGS}  /Od")

#INSTALL()
#INSTALL(TARGETS ${CURRENT_PROJ_NAME}
#  RUNTIME DESTINATION ${12YSIM_INSTALL_PATH}
#  LIBRARY DESTINATION ${12YSIM_INSTALL_PATH}
#  ARCHIVE DESTINATION ${12YSIM_INSTALL_PATH}
#  FRAMEWORK DESTINATION ${12YSIM_INSTALL_PATH}
#  PUBLIC_HEADER DESTINATION ${12YSIM_INSTALL_PATH}
#  )

#INSTALL(FILES ${CMAKE_RUNTIME_RELEASE_OUTPUT_DIRECTORY}/${CURRENT_PROJ_NAME}.pdb DESTINATION ./pdb
#  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
#        GROUP_EXECUTE GROUP_READ
#  )