
# sources
FILE(GLOB CS_CSSIMLOGTEST_SRC "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

# headers
FILE(GLOB CS_CSSIMLOGTEST_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

#设置自动生成的头文件到src目录
#SET(CS_EXPORT_HEADER #${CMAKE_SOURCE_DIR}/spliceForTool/spliceForTool/spliceForTool_export.h)

#设置工程名称
SET(CURRENT_PROJ_NAME cssimlogTest)

SET(CS_CSSIMLOGTEST_SRC ${CS_CSSIMLOGTEST_SRC} ${CS_CSSIMLOGTEST_HEADERS} )

#SET(CS_CSSIMLOGTEST_HEADERS ${CS_CSSIMLOGTEST_HEADERS} ${CS_EXPORT_HEADER})

#包含目录
INCLUDE_DIRECTORIES(
					${CMAKE_SOURCE_DIR}/spliceForTool/cssimlog
)

#库目录
LINK_DIRECTORIES( 

)

################################################################################################${CS_BROWSER_MOC_SRCS}

#生成库
ADD_EXECUTABLE(${CURRENT_PROJ_NAME}   ${CS_CSSIMLOGTEST_HEADERS} ${CS_CSSIMLOGTEST_SRC})

SET_TARGET_PROPERTIES(${CURRENT_PROJ_NAME} PROPERTIES FOLDER "test")

#生成头文件
#GENERATE_EXPORT_HEADER(toolTestA
#EXPORT_FILE_NAME ${CS_EXPORT_HEADER}
#)

#链接库
TARGET_LINK_LIBRARIES(cssimlogTest  
  cssimlog
)

